Flex wrap fixed

--- a/src/app/manage/media/media-overview/media-card/media-card.component.scss
+++ b/src/app/manage/media/media-overview/media-card/media-card.component.scss
@@ -22,9 +22,6 @@
   height: 188px;
   width: 100%;
   object-fit: cover;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
 }
 
 .mc__actions-container {
